--- a/views/cuisConteneurs/show_admin.ejs
+++ b/views/cuisConteneurs/show_admin.ejs
@@ -107,7 +107,8 @@
                  
               </div>
               <div class="table-responsive">
-                  <table class="table table-hover" data-search="true">
+                  <table class="table table-hover" data-search="true"
+                  >
                       <thead>
                           <tr>
                               <th>User</th>
