--- a/views/articles/login.ejs
+++ b/views/articles/login.ejs
@@ -8,6 +8,8 @@
   
   <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -330,9 +332,13 @@ h6 span{
 						<h6 class="mb-0 pb-3"><span>Admin </span><span>Employé</span></h6>
 			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
 			          	<label for="reg-log"></label>
-						<% if(typeof AlerteAuth != "undefined"){%>
+						<div><p style="border-radius: 25px;background : #ff9800;display:inline-flex;margin: 10px;
+    padding: 5px;"><i class="material-icons"><span class="material-icons-outlined">
+report_problem
+</span></i>
+	<% if(typeof AlerteAuth != "undefined"){%>
 					  <%=AlerteAuth%>
-					  <%}%>
+					  <%}%></p></div>
 						<div class="card-3d-wrap mx-auto">
 							<div class="card-3d-wrapper">
 								<div class="card-front">
@@ -359,9 +365,7 @@ h6 span{
 									<div class="center-wrap">
 										<div class="section text-center">
 											<h4 class="mb-4 pb-3">Employé Acces</h4>
-					 <% if(typeof AlerteAuth != "undefined"){%>
-					  <%=AlerteAuth%>
-					  <%}%>
+					
                       <form action="/" method = "POST" name="login">
                         <div class="form-group">
                           <input type="email" name="email" class="form-style" placeholder="Your Email Employé" id="email" aria-describedby="emailHelp">
